--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1014,9 +1014,6 @@ select {
 .z-30 {
   z-index: 30;
 }
-.z-40 {
-  z-index: 40;
-}
 .z-10 {
   z-index: 10;
 }
@@ -1028,9 +1025,6 @@ select {
 }
 .m-0 {
   margin: 0px;
-}
-.-m-2 {
-  margin: -0.5rem;
 }
 .m-auto {
   margin: auto;
@@ -1047,14 +1041,6 @@ select {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-.-mx-2 {
-  margin-left: -0.5rem;
-  margin-right: -0.5rem;
-}
-.-my-3 {
-  margin-top: -0.75rem;
-  margin-bottom: -0.75rem;
 }
 .mx-6 {
   margin-left: 1.5rem;
@@ -1161,9 +1147,6 @@ select {
 .mr-1 {
   margin-right: 0.25rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
 .mt-0 {
   margin-top: 0px;
 }
@@ -1172,6 +1155,9 @@ select {
 }
 .mt-16 {
   margin-top: 4rem;
+}
+.ml-auto {
+  margin-left: auto;
 }
 .ml-5 {
   margin-left: 1.25rem;
@@ -1242,11 +1228,11 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-80 {
+  height: 20rem;
+}
 .h-full {
   height: 100%;
-}
-.h-96 {
-  height: 24rem;
 }
 .h-56 {
   height: 14rem;
@@ -1305,8 +1291,8 @@ select {
 .w-2\/4 {
   width: 50%;
 }
-.w-40 {
-  width: 10rem;
+.w-3\/5 {
+  width: 60%;
 }
 .w-24 {
   width: 6rem;
@@ -1337,9 +1323,6 @@ select {
 }
 .max-w-2xl {
   max-width: 42rem;
-}
-.max-w-xs {
-  max-width: 20rem;
 }
 .max-w-sm {
   max-width: 24rem;
@@ -1435,9 +1418,6 @@ select {
 .items-center {
   align-items: center;
 }
-.items-baseline {
-  align-items: baseline;
-}
 .justify-end {
   justify-content: flex-end;
 }
@@ -1459,10 +1439,6 @@ select {
 .gap-8 {
   gap: 2rem;
 }
-.gap-x-8 {
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
-}
 .gap-y-10 {
   row-gap: 2.5rem;
 }
@@ -1472,6 +1448,10 @@ select {
 }
 .gap-y-16 {
   row-gap: 4rem;
+}
+.gap-x-8 {
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1492,11 +1472,6 @@ select {
   --tw-space-x-reverse: 0;
   margin-right: calc(-1rem * var(--tw-space-x-reverse));
   margin-left: calc(-1rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .space-y-10 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -1607,9 +1582,6 @@ select {
 .border-l {
   border-left-width: 1px;
 }
-.border-dashed {
-  border-style: dashed;
-}
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1688,10 +1660,6 @@ select {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-indigo-100 {
   --tw-bg-opacity: 1;
@@ -1860,18 +1828,6 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pb-12 {
-  padding-bottom: 3rem;
-}
-.pt-12 {
-  padding-top: 3rem;
-}
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-.pb-24 {
-  padding-bottom: 6rem;
-}
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1889,6 +1845,9 @@ select {
 }
 .pt-10 {
   padding-top: 2.5rem;
+}
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -1970,11 +1929,11 @@ select {
 .font-semibold {
   font-weight: 600;
 }
-.font-extrabold {
-  font-weight: 800;
-}
 .font-bold {
   font-weight: 700;
+}
+.font-extrabold {
+  font-weight: 800;
 }
 .uppercase {
   text-transform: uppercase;
@@ -2139,11 +2098,6 @@ select {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
@@ -2974,6 +2928,11 @@ input[type=number]::-webkit-outer-spin-button {
     padding-right: 5rem;
   }
 
+  .sm\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
   .sm\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -3150,10 +3109,6 @@ input[type=number]::-webkit-outer-spin-button {
     grid-column: span 4 / span 4;
   }
 
-  .lg\:col-span-3 {
-    grid-column: span 3 / span 3;
-  }
-
   .lg\:col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -3189,10 +3144,6 @@ input[type=number]::-webkit-outer-spin-button {
     display: flex;
   }
 
-  .lg\:hidden {
-    display: none;
-  }
-
   .lg\:h-full {
     height: 100%;
   }
@@ -3217,16 +3168,16 @@ input[type=number]::-webkit-outer-spin-button {
     flex-shrink: 0;
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:items-center {
