--- a/public/css/app.css
+++ b/public/css/app.css
@@ -981,6 +981,9 @@ select {
 .z-10 {
   z-index: 10;
 }
+.z-40 {
+  z-index: 40;
+}
 .z-30 {
   z-index: 30;
 }
@@ -999,6 +1002,9 @@ select {
 .m-10 {
   margin: 2.5rem;
 }
+.-m-2 {
+  margin: -0.5rem;
+}
 .m-3 {
   margin: 0.75rem;
 }
@@ -1016,6 +1022,14 @@ select {
 .-my-2 {
   margin-top: -0.5rem;
   margin-bottom: -0.5rem;
+}
+.-mx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+.-my-3 {
+  margin-top: -0.75rem;
+  margin-bottom: -0.75rem;
 }
 .mx-6 {
   margin-left: 1.5rem;
@@ -1109,6 +1123,12 @@ select {
 .ml-0 {
   margin-left: 0px;
 }
+.ml-auto {
+  margin-left: auto;
+}
+.ml-5 {
+  margin-left: 1.25rem;
+}
 .ml-16 {
   margin-left: 4rem;
 }
@@ -1118,14 +1138,8 @@ select {
 .mb-3 {
   margin-bottom: 0.75rem;
 }
-.ml-auto {
-  margin-left: auto;
-}
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-.ml-5 {
-  margin-left: 1.25rem;
 }
 .-mt-px {
   margin-top: -1px;
@@ -1190,8 +1204,11 @@ select {
 .h-full {
   height: 100%;
 }
-.h-80 {
-  height: 20rem;
+.h-96 {
+  height: 24rem;
+}
+.h-64 {
+  height: 16rem;
 }
 .h-56 {
   height: 14rem;
@@ -1201,6 +1218,9 @@ select {
 }
 .h-28 {
   height: 7rem;
+}
+.h-80 {
+  height: 20rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1247,6 +1267,12 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-40 {
+  width: 10rem;
+}
+.w-56 {
+  width: 14rem;
+}
 .w-2\/4 {
   width: 50%;
 }
@@ -1282,6 +1308,9 @@ select {
 }
 .max-w-2xl {
   max-width: 42rem;
+}
+.max-w-xs {
+  max-width: 20rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -1377,6 +1406,9 @@ select {
 .items-center {
   align-items: center;
 }
+.items-baseline {
+  align-items: baseline;
+}
 .justify-end {
   justify-content: flex-end;
 }
@@ -1405,12 +1437,12 @@ select {
   -moz-column-gap: 1.5rem;
        column-gap: 1.5rem;
 }
-.gap-y-16 {
-  row-gap: 4rem;
-}
 .gap-x-8 {
   -moz-column-gap: 2rem;
        column-gap: 2rem;
+}
+.gap-y-16 {
+  row-gap: 4rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1436,6 +1468,11 @@ select {
   --tw-space-y-reverse: 0;
   margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .-space-x-1 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1541,6 +1578,9 @@ select {
 .border-r {
   border-right-width: 1px;
 }
+.border-dashed {
+  border-style: dashed;
+}
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1627,6 +1667,10 @@ select {
 .bg-orange-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+}
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-indigo-100 {
   --tw-bg-opacity: 1;
@@ -1788,6 +1832,12 @@ select {
 }
 .pb-20 {
   padding-bottom: 5rem;
+}
+.pb-12 {
+  padding-bottom: 3rem;
+}
+.pb-24 {
+  padding-bottom: 6rem;
 }
 .pb-16 {
   padding-bottom: 4rem;
@@ -2036,6 +2086,11 @@ select {
 .shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
@@ -2561,6 +2616,10 @@ input[type=number]::-webkit-outer-spin-button {
 .disabled\:opacity-25:disabled {
   opacity: 0.25;
 }
+.group:hover .group-hover\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
 .group:hover .group-hover\:opacity-75 {
   opacity: 0.75;
 }
@@ -2660,6 +2719,10 @@ input[type=number]::-webkit-outer-spin-button {
 
   .sm\:ml-16 {
     margin-left: 4rem;
+  }
+
+  .sm\:ml-7 {
+    margin-left: 1.75rem;
   }
 
   .sm\:mt-12 {
@@ -2863,11 +2926,6 @@ input[type=number]::-webkit-outer-spin-button {
     padding-bottom: 1.5rem;
   }
 
-  .sm\:py-24 {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
   .sm\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -2876,6 +2934,11 @@ input[type=number]::-webkit-outer-spin-button {
   .sm\:py-16 {
     padding-top: 4rem;
     padding-bottom: 4rem;
+  }
+
+  .sm\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
   }
 
   .sm\:pt-0 {
@@ -3080,6 +3143,10 @@ input[type=number]::-webkit-outer-spin-button {
 
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-full {
